Use valueOf method over Integer and Long constructors